# FactorioServerManager

./: .gitignore  API_ANALYSIS.md  API_IMPLEMENTATION.md  Dockerfile.backend  LICENSE  README.md  app.py  compose.yml  config.py  conifg.py  database.py  docker-compose.yml  main.py  package.json  pyproject.toml  pyproject.toml.old  routes.py  ruff.toml  sources.txt  start-backend.sh  start-frontend.sh  todo.md
.github/workflows/: backend.yml
_types/: __init__.py  data.py  database.py  dicts.py  enums.py  factorio_interface.py  forms.py  settings.py  website.py
backend/: __init__.py  __main__.py  app.py  constants.py  dockerfile  pyproject.toml  ruff.toml
backend/api/: server.py
backend/core/: __init__.py  default_settings.py  server.py
backend/models/: __init__.py  factorio.py  user.py
blueprints/: __init__.py  dashboard.py  files.py  login.py  server.py
frontend/: dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  constants.ts  index.tsx  types.ts
scripts/: __init__.py  server_settings.py  verify.sh
skills/agent-customization/: SKILL.md
src/: auth.py  config.py  error_handlers.py  main.py  pyproject.toml  routes.py
src/FSM/: __main__.py  app.py  config.ini  config.py  logging_utils.py  main.py  routes.py  security.py
src/FactorioServerManager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/_types/: __init__.py  data.py  enums.py  factorio_interface.py  forms.py  settings.py
src/backend/: __init__.py  __main__.py  app.py  config.py  constants.py  database.py  main.py  rate_limit.py  schemas.py  security.py
src/blueprints/: server.py
src/frontend/: Dockerfile  (+4 more)
templates/: base.j2  dashboard.j2  download.j2  factorio_login.j2  install_server.j2  login.j2  manage_server.j2  navbar.j2  noscript.j2  profile.j2  server_overview.j2
tools/: generate-tag.mjs
(+177 files in other folders)
