[project]
name = "FSM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HEROgold" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.4",
    "beautifulsoup4>=4.14.3",
    "confkit>=1.3.1",
    "cryptography>=46.0.6",
    "flask[async]>=3.1.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.48",
    "docker>=7.1.0",
    "sentry-sdk>=2.57.0",
    "fastapi>=0.135.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
